--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,81 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>net.evrythng</groupId>
-  <artifactId>thng-java-wrapper</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>thng-api-wrapper</name>
-  <description>Java wrapper for the Evrythng.net REST API.</description>
-  <dependencies>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.10</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.httpcomponents</groupId>
-  		<artifactId>httpclient</artifactId>
-  		<version>4.1.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.json</groupId>
-  		<artifactId>json</artifactId>
-  		<version>20090211</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.commons</groupId>
-  		<artifactId>commons-lang3</artifactId>
-  		<version>3.1</version>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>net.evrythng</groupId>
+	<artifactId>evrythng-java-wrapper</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>evrythng-java-wrapper</name>
+	<description>Java wrapper for the Evrythng API.</description>
+	<inceptionYear>2011</inceptionYear>
+	<organization>
+		<name>Evrythng</name>
+		<url>http://evrythng.net</url>
+	</organization>
+	<url>https://github.com/evrythng/evrythng-java-wrapper</url>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
+	</dependencies>
+	<profiles>
+		<profile>
+			<id>evrythng-show-properties</id>
+			<activation>
+				<property>
+					<name>showProperties</name>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.geronimo.genesis.plugins</groupId>
+						<artifactId>tools-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>evrythng-show-properties-validate</id>
+								<phase>validate</phase>
+								<goals>
+									<goal>show-properties</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.11</version>
+				<configuration>
+					<systemPropertyVariables>
+						<evrythng.api.token>${evrythng.api.token}</evrythng.api.token>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
