--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
 	<url>https://github.com/evrythng/evrythng-java-wrapper</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<sonar.host.url>http://213.239.204.201:9000</sonar.host.url>
+		<sonar.jdbc.url>jdbc:mysql://213.239.204.201:3306/sonar</sonar.jdbc.url>
+		<sonar.jdbc.username>sonar</sonar.jdbc.username>
+		<sonar.jdbc.driver>com.mysql.jdbc.Driver</sonar.jdbc.driver>
 	</properties>
 	<dependencies>
 		<dependency>
