--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.evrythng</groupId>
 	<artifactId>evrythng-java-wrapper</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.2-SNAPSHOT</version>
 	<name>evrythng-java-wrapper</name>
 	<description>Java wrapper for the Evrythng API.</description>
 	<inceptionYear>2011</inceptionYear>
@@ -14,10 +14,6 @@
 	<url>https://github.com/evrythng/evrythng-java-wrapper</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<sonar.host.url>http://213.239.204.201:9000</sonar.host.url>
-		<sonar.jdbc.url>jdbc:mysql://213.239.204.201:3306/sonar</sonar.jdbc.url>
-		<sonar.jdbc.username>sonar</sonar.jdbc.username>
-		<sonar.jdbc.driver>com.mysql.jdbc.Driver</sonar.jdbc.driver>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -31,14 +27,25 @@
 			<version>4.1.2</version>
 		</dependency>
 		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20090211</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.3</version>
+			<classifier>jdk15</classifier>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 	<profiles>
@@ -90,4 +97,9 @@
 			</plugin>
 		</plugins>
 	</build>
+	<scm>
+		<url>scm:git:git@github.com:evrythng/evrythng-java-wrapper.git</url>
+		<connection>scm:git:git@github.com:evrythng/evrythng-java-wrapper.git</connection>
+		<developerConnection>scm:git:git@github.com:evrythng/evrythng-java-wrapper.git</developerConnection>
+	</scm>
 </project>
