--- a/pom.xml
+++ b/pom.xml
@@ -1,105 +1,119 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>net.evrythng</groupId>
-	<artifactId>evrythng-java-wrapper</artifactId>
-	<version>0.2-SNAPSHOT</version>
-	<name>evrythng-java-wrapper</name>
-	<description>Java wrapper for the Evrythng API.</description>
-	<inceptionYear>2011</inceptionYear>
-	<organization>
-		<name>Evrythng</name>
-		<url>http://evrythng.net</url>
-	</organization>
-	<url>https://github.com/evrythng/evrythng-java-wrapper</url>
-		<scm>
-		<url>scm:git:git@github.com:evrythng/evrythng-java-wrapper.git</url>
-		<connection>scm:git:git@github.com:evrythng/evrythng-java-wrapper.git</connection>
-		<developerConnection>scm:git:git@github.com:evrythng/evrythng-java-wrapper.git</developerConnection>
-	</scm>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.1</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.json-lib</groupId>
-			<artifactId>json-lib</artifactId>
-			<version>2.3</version>
-			<classifier>jdk15</classifier>
-		</dependency>
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-	</dependencies>
-	<profiles>
-		<profile>
-			<id>evrythng-show-properties</id>
-			<activation>
-				<property>
-					<name>showProperties</name>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.geronimo.genesis.plugins</groupId>
-						<artifactId>tools-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>evrythng-show-properties-validate</id>
-								<phase>validate</phase>
-								<goals>
-									<goal>show-properties</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.11</version>
-				<configuration>
-					<systemPropertyVariables>
-						<evrythng.api.token>${evrythng.api.token}</evrythng.api.token>
-					</systemPropertyVariables>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>net.evrythng</groupId>
+    <artifactId>evrythng-java-wrapper</artifactId>
+    <version>0.2-SNAPSHOT</version>
+    <name>evrythng-java-wrapper</name>
+    <description>Java wrapper for the Evrythng API.</description>
+    <inceptionYear>2011</inceptionYear>
+    <organization>
+        <name>Evrythng</name>
+        <url>http://evrythng.net</url>
+    </organization>
+    <url>https://github.com/evrythng/evrythng-java-wrapper</url>
+    <scm>
+        <url>scm:git:git@github.com:evrythng/evrythng-java-wrapper.git</url>
+        <connection>scm:git:git@github.com:evrythng/evrythng-java-wrapper.git</connection>
+        <developerConnection>scm:git:git@github.com:evrythng/evrythng-java-wrapper.git</developerConnection>
+    </scm>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.3</version>
+            <classifier>jdk15</classifier>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+    </dependencies>
+    <profiles>
+        <profile>
+            <id>evrythng-show-properties</id>
+            <activation>
+                <property>
+                    <name>showProperties</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.geronimo.genesis.plugins</groupId>
+                        <artifactId>tools-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>evrythng-show-properties-validate</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>show-properties</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.11</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <evrythng.api.token>${evrythng.api.token}</evrythng.api.token>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>fully.qualified.MainClass</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
