--- a/src/main/resources/evrythng-config.properties
+++ b/src/main/resources/evrythng-config.properties
@@ -2,9 +2,9 @@
 evrythng.api.configuration.encoding=UTF-8
 
 # Server:
-evrythng.api.configuration.server.scheme=https
-evrythng.api.configuration.server.host=evrythng.net
-evrythng.api.configuration.server.port=-1
+evrythng.api.configuration.server.scheme=${evrythng.api.configuration.server.scheme}
+evrythng.api.configuration.server.host=${evrythng.api.configuration.server.host}
+evrythng.api.configuration.server.port=${evrythng.api.configuration.server.port}
 
 # HTTP Headers:
 evrythng.api.configuration.http.content.type=application/json
