--- a/src/test/resources/test-config.properties
+++ b/src/test/resources/test-config.properties
@@ -3,7 +3,7 @@
 ## Required
 
 # Provide a valid authentication token or use VM arguments (i.e. -Devrythng.api.token=<your token>):
-evrythng.api.token=
+evrythng.api.token=${evrythng.api.token}
 
 ## Optional
 
