--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         
         <!-- Wrapper properties  -->
         <evrythng.api.configuration.server.scheme>http</evrythng.api.configuration.server.scheme>
-        <evrythng.api.configuration.server.host>qa.evrythng.net</evrythng.api.configuration.server.host>
+        <evrythng.api.configuration.server.host>evrythng.net</evrythng.api.configuration.server.host>
         <evrythng.api.configuration.server.port>-1</evrythng.api.configuration.server.port>
         
     </properties>
