--- a/src/test/resources/wrapper.properties
+++ b/src/test/resources/wrapper.properties
@@ -1,4 +1,4 @@
-accept-type="application/json"
-content-type="application/json"
-header-authorization-type="X-Evrythng-Token"
+accept-type=application/json
+content-type=application/json
 evrythng.api.baseDomainUrl=${evrythng.api.baseDomainUrl}
+evrythng.api.access_token=${evrythng.api.access_token}
