--- a/src/main/resources/wrapper.properties
+++ b/src/main/resources/wrapper.properties
@@ -3,3 +3,4 @@ content-type=application/json
 evrythng.api.baseDomainUrl=${evrythng.api.baseDomainUrl}
 evrythng.api.access_token=${evrythng.api.access_token}
 evrythng.engine.thng-store.contextPath=${evrythng.engine.thng-store.contextPath}
+evrythng.api.useWrapperBehindAccessController=${evrythng.api.useWrapperBehindAccessController}
