--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.evrythng</groupId>
 	<artifactId>evrythng-java-wrapper</artifactId>
-	<version>0.3.3-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<name>evrythng-java-wrapper</name>
 	<description>Java wrapper for the EVRYTHNG API.</description>
@@ -14,6 +14,13 @@
 		<name>EVRYTHNG Ltd London / Zurich</name>
 		<url>http://www.evrythng.com</url>
 	</organization>
+
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
 
 	<developers>
 		<developer>
@@ -189,6 +196,28 @@
 	
 	<profiles>
 		<profile>
+			<id>dist-java</id>
+			<activation>
+				<property>
+					<name>dist</name>
+					<value>android</value>
+				</property>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.apache.httpcomponents</groupId>
+					<artifactId>httpclient</artifactId>
+					<version>${apache.httpclient.version}</version>
+					<exclusions>
+						<exclusion>
+							<artifactId>commons-logging</artifactId>
+							<groupId>commons-logging</groupId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
 			<id>dist-android</id>
 			<activation>
 				<property>
@@ -214,39 +243,6 @@
 	</profiles>
 
 	<repositories>
-		<repository>
-			<id>evrythng-repository</id>
-			<name>Internal Snapshots</name>
-			<url>https://internal.evrythng.net/nexus/content/repositories/snapshots</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>evrythng-releases</id>
-			<name>Internal Releases</name>
-			<url>https://internal.evrythng.net/nexus/content/repositories/releases</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>springsource-repo</id>
-			<name>SpringSource Repository</name>
-			<url>http://repo.springsource.org/release</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
 	</repositories>
 
 	<scm>
