--- a/pom.xml
+++ b/pom.xml
@@ -1,265 +1,225 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.evrythng</groupId>
-	<artifactId>evrythng-java-wrapper</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+    <groupId>com.evrythng</groupId>
+    <artifactId>evrythng-java-wrapper</artifactId>
+    <version>1.0.5</version>
+    <packaging>jar</packaging>
 
-	<name>evrythng-java-wrapper</name>
-	<description>Java wrapper for the EVRYTHNG API.</description>
-	<url>https://github.com/evrythng/evrythng-java-wrapper</url>
+    <name>evrythng-java-wrapper</name>
+    <description>Java wrapper for the EVRYTHNG API.</description>
+    <url>https://github.com/evrythng/evrythng-java-wrapper</url>
 
-	<organization>
-		<name>EVRYTHNG Ltd London / Zurich</name>
-		<url>http://www.evrythng.com</url>
-	</organization>
+    <organization>
+        <name>EVRYTHNG Ltd London / Zurich</name>
+        <url>http://www.evrythng.com</url>
+    </organization>
+    
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
-	<licenses>
-		<license>
-			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-		</license>
-	</licenses>
+    <developers>
+        <developer>
+            <id>dom</id>
+            <email>dom@evrythng.com</email>
+            <name>Dominique Guinard</name>
+            <roles>
+                <role>Chief Technology Officer</role>
+            </roles>
+        </developer>
+        <developer>
+            <id>pedro</id>
+            <email>pedro@evrythng.com</email>
+            <name>Pedro de Almeida</name>
+            <roles>
+                <role>Lead Developer</role>
+            </roles>
+        </developer>
+        <developer>
+            <id>thomas</id>
+            <email>thomas@evrythng.com</email>
+            <name>Thomas Pham</name>
+            <roles>
+                <role>Lead Infrastructure / Developer</role>
+            </roles>
+        </developer>
+        <developer>
+            <id>my</id>
+            <email>my@evrythng.com</email>
+            <name>Michel Yerly</name>
+            <roles>
+                <role>Senior Backend Developer</role>
+            </roles>
+        </developer>
+    </developers>
 
-	<developers>
-		<developer>
-			<id>dom</id>
-			<email>dom@evrythng.com</email>
-			<name>Dominique Guinard</name>
-			<roles>
-				<role>Chief Technology Officer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>pedro</id>
-			<email>pedro@evrythng.com</email>
-			<name>Pedro de Almeida</name>
-			<roles>
-				<role>Lead Developer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>thomas</id>
-			<email>thomas@evrythng.com</email>
-			<name>Thomas Pham</name>
-			<roles>
-				<role>Lead Infrastructure / Developer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>my</id>
-			<email>my@evrythng.com</email>
-			<name>Michel Yerly</name>
-			<roles>
-				<role>Senior Backend Developer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>victor</id>
-			<email>victor@evrythng.com</email>
-			<name>Victor Sergienko</name>
-			<roles>
-				<role>Backend Developer</role>
-			</roles>
-		</developer>
-	</developers>
+    <properties>
+        <!-- Versions -->
+        <version.httpclient>4.2.1</version.httpclient>
+        <jackson.databind.version>2.1.0</jackson.databind.version>
+    </properties>
 
-	<properties>
-		<!-- *** Platform *** -->
-		<java.jdk.level>1.6</java.jdk.level>
-		
-		<!-- Encodings -->
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		
-		<!-- Versions -->
-		<version.evrythng-engine>1.0.0</version.evrythng-engine>
-		<version.org.apache.httpcomponents>4.2.1</version.org.apache.httpcomponents>
-		<version.jackson-databind>2.1.0</version.jackson-databind>
-		<version.commons-collections>3.2.1</version.commons-collections>
-		<version.commons-io>2.3</version.commons-io>
-		<version.commons-lang3>3.1</version.commons-lang3>
-		<version.logback-classic>1.0.7</version.logback-classic>
-		<version.junit>4.10</version.junit>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>thng-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>thng-resource-model</artifactId>
+            <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jboss-logging</artifactId>
+                    <groupId>org.jboss.logging</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${version.httpclient}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.databind.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.7</version>
+        </dependency>
+        <!-- Use instead of all the Java.commons.logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>1.6.6</version>
+        </dependency>
+    </dependencies>
 
-		<!-- Log levels -->
-		<log.level>DEBUG</log.level>
-	</properties>
-
-	<dependencies>
-		<dependency>
-			<groupId>com.evrythng</groupId>
-			<artifactId>thng-commons</artifactId>
-			<version>${version.evrythng-engine}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.evrythng</groupId>
-			<artifactId>thng-resource-model</artifactId>
-			<version>${version.evrythng-engine}</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>jboss-logging</artifactId>
-					<groupId>org.jboss.logging</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>${version.org.apache.httpcomponents}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>${version.jackson-databind}</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-collections</groupId>
-			<artifactId>commons-collections</artifactId>
-			<version>${version.commons-collections}</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>${version.commons-io}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>${version.commons-lang3}</version>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>${version.logback-classic}</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${version.junit}</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-		<testResources>
-			<testResource>
-				<directory>src/test/resources</directory>
-				<filtering>true</filtering>
-			</testResource>
-		</testResources>
-
-		<plugins>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>com.evrythng.java.wrapper.examples.ApiExamples</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
-				<configuration>
-					<source>${java.jdk.level}</source>
-					<target>${java.jdk.level}</target>
-					<encoding>UTF-8</encoding>
-					<debug>true</debug>
-					<debuglevel>lines,vars,source</debuglevel>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8.1</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.1</version>
-				<executions>
-					<execution>
-						<id>attach-descriptor</id>
-						<goals>
-							<goal>attach-descriptor</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.evrythng.java.wrapper.examples.ApiExamples</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9</version>
+            </plugin>
+        </plugins>
+    </build>
+    
+    <repositories>
+        <repository>
+            <id>evrythng-public-snapshots</id>
+            <name>Public Snapshots</name>
+            <url>https://internal.evrythng.net/nexus/content/repositories/evrythng-public-snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>evrythng-public-releases</id>
+            <name>Public Releases</name>
+            <url>https://internal.evrythng.net/nexus/content/repositories/evrythng-public-releases</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 	
-	<profiles>
-		<profile>
-			<id>dist-java</id>
-			<properties>
-				<log.level>WARN</log.level>
-			</properties>
-		</profile>
-	</profiles>
+    <profiles>
+        <profile>
+            <id>dist-android</id>
+            <activation>
+                <property>
+                    <name>dist</name>
+                    <value>android</value>
+                </property>
+            </activation>
+        </profile>
+    </profiles>
 
-	<repositories>
-		<repository>
-			<id>evrythng-repository</id>
-			<name>EVRYTHNG Snapshots</name>
-			<url>https://repo.evrythng.com/public/snapshots</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>evrythng-releases</id>
-			<name>EVRYTHNG Releases</name>
-			<url>https://repo.evrythng.com/public/releases</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
+    <scm>
+        <connection>scm:git:git://github.com/evrythng/evrythng-java-wrapper.git</connection>
+        <developerConnection>scm:git:git@github.com:evrythng/evrythng-java-wrapper.git</developerConnection>
+        <url>https://github.com/evrythng/evrythng-java-wrapper</url>
+      <tag>HEAD</tag>
+  </scm>
+    
+    <issueManagement>
+        <url>https://github.com/evrythng/evrythng-java-wrapper/issues</url>
+        <system>GitHub Issues</system>
+    </issueManagement>
 
-	<scm>
-		<url>https://github.com/evrythng/evrythng-java-wrapper.git</url>
-		<connection>scm:git:ssh://git@github.com/evrythng/evrythng-java-wrapper.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com/evrythng/evrythng-java-wrapper.git</developerConnection>
-	</scm>
-	
-	<distributionManagement>
-		<repository>
-			<id>evrythng-public-releases</id>
-			<name>Evrythng Releases Repository</name>
-			<url>https://internal.evrythng.net/nexus/content/repositories/evrythng-public-releases</url>
-		</repository>
-		<snapshotRepository>
-			<id>evrythng-public-snapshots</id>
-			<name>Evrythng Snapshots Repository</name>
-			<url>https://internal.evrythng.net/nexus/content/repositories/evrythng-public-snapshots</url>
-			<uniqueVersion>false</uniqueVersion>
-		</snapshotRepository>
-	</distributionManagement>
-
+    <distributionManagement>
+        <repository>
+            <id>evrythng-public-releases</id>
+            <name>Public Releases</name>
+            <url>https://internal.evrythng.net/nexus/content/repositories/evrythng-public-releases</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
+        <snapshotRepository>
+            <id>evrythng-public-snapshots</id>
+            <name>Public Snapshots</name>
+            <url>https://internal.evrythng.net/nexus/content/repositories/evrythng-public-snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
