--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
                 <!-- Ensure IDEs use the correct level for compiling. -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.0</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
