--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.evrythng</groupId>
     <artifactId>evrythng-tools</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.0.6</version>
 
     <name>evrythng-tools</name>
     <description>Java tools around the EVRYTHNG API.</description>
