--- a/thng-resource-model/pom.xml
+++ b/thng-resource-model/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.evrythng</groupId>
         <artifactId>evrythng-tools</artifactId>
-        <version>1.0.6-SNAPSHOT</version>
+        <version>1.0.6</version>
     </parent>
 	
     <artifactId>thng-resource-model</artifactId>
