Added evrythng common and support for paginated list into the wrapper.

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
 	<modules>
 		<module>thng-resource-model</module>
 		<module>evrythng-java-wrapper</module>
+		<module>evrythng-commons</module>
 	</modules>
 
 	<build>
