--- a/evrythng-commons/pom.xml
+++ b/evrythng-commons/pom.xml
@@ -3,7 +3,7 @@
 
     <parent>
         <groupId>com.evrythng</groupId>
-        <artifactId>evrythng-tools</artifactId>
+        <artifactId>evrythng-java-sdk</artifactId>
         <version>1.7.0-SNAPSHOT</version>
     </parent>
 	
