--- a/evrythng-java-wrapper/pom.xml
+++ b/evrythng-java-wrapper/pom.xml
@@ -4,7 +4,7 @@
 
 	<parent>
 		<groupId>com.evrythng</groupId>
-		<artifactId>evrythng-tools</artifactId>
+		<artifactId>evrythng-java-sdk</artifactId>
 		<version>1.7.0-SNAPSHOT</version>
 	</parent>
 
